--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "joi": "^17.8.3",
     "mysql2": "^3.1.2",
+    "nodemailer": "^6.9.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.1",
     "winston": "^3.8.2"
